--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
-version: '3.7'
 services:
   trino-coordinator:
-    image: 'trinodb/trino:446'
+    image: 'trinodb/trino:latest'
     hostname: trino-coordinator
     ports:
-      - '8080:8080'
+      - '8081:8080'
     volumes:
-      - ./etc:/etc/trino
-      - ./conf:/etc/trino/conf
+      - ./conf/core-site.xml:/etc/trino/etc/hadoop/core-site.xml
+      - ./conf/metastore-site.xml:/etc/trino/metastore-site.xml
+      - ./etc/catalog:/etc/trino/catalog
     networks:
       - trino-network
 
@@ -47,6 +47,7 @@ services:
       - '9083:9083' # Metastore Thrift
     volumes:
       - ./conf/metastore-site.xml:/opt/apache-hive-metastore-3.0.0-bin/conf/metastore-site.xml:ro
+      - ./conf/core-site.xml:/opt/apache-hive-metastore-3.0.0-bin/conf/core-site.xml:ro
     environment:
       METASTORE_DB_HOSTNAME: postgres
       METASTORE_TYPE: postgres
