--- a/etc/catalog/hive.properties
+++ b/etc/catalog/hive.properties
@@ -1,14 +1,17 @@
 connector.name=hive
 hive.metastore.uri=thrift://hive-metastore:9083
-hive.metastore.username=
-hive.s3.path-style-access=true
-hive.s3.endpoint=http://minio:9000
-hive.s3.aws-access-key=minio
-hive.s3.aws-secret-key=minio123
-hive.non-managed-table-writes-enabled=true
+#hive.metastore.username=
+fs.native-s3.enabled=true
+s3.path-style-access=true
+s3.endpoint=http://minio:9000
+s3.aws-access-key=minio
+s3.aws-secret-key=minio123
+s3.region=ap-south-1
+s3.signer-type=AwsS3V4Signer
+#non-managed-table-writes-enabled=true
 #hive.s3select-pushdown.enabled=true
-hive.storage-format=ORC
+#hive.storage-format=ORC
 
 #hive.allow-drop-table=true
-hive.config.resources=/etc/trino/conf/core-site.xml,/etc/trino/conf/metastore-site.xml
-hive.metastore.thrift.delete-files-on-drop=true
+#hive.config.resources=/etc/trino/conf/core-site.xml,/etc/trino/conf/metastore-site.xml
+#hive.metastore.thrift.delete-files-on-drop=true
