--- a/etc/config.properties
+++ b/etc/config.properties
@@ -6,3 +6,6 @@ discovery-server.enabled=true
 discovery.uri=http://localhost:8080
 # http-server.authentication.type=PASSWORD
 # internal-communication.shared-secret=some
+
+# JMX Agent
+jvm.config=-javaagent:/opt/jmx/jmx_prometheus_javaagent.jar=7071:/opt/jmx/trino-jmx-config.yaml
