--- a/etc/jvm.config
+++ b/etc/jvm.config
@@ -9,3 +9,14 @@
 -XX:ReservedCodeCacheSize=256M
 -Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
+
+# 🔁 Add these lines for Prometheus metrics via JMX
+-Dcom.sun.management.jmxremote
+-Dcom.sun.management.jmxremote.port=7080
+-Dcom.sun.management.jmxremote.rmi.port=7080
+-Dcom.sun.management.jmxremote.authenticate=false
+-Dcom.sun.management.jmxremote.ssl=false
+-Djava.rmi.server.hostname=trino-coordinator
+
+# ✅ [NEW] Add the JMX Prometheus Java Agent
+-javaagent:/opt/jmx/jmx_prometheus_javaagent.jar=7071:/opt/jmx/trino-jmx-config.yaml
