--- a/logging/fluentd/Dockerfile
+++ b/logging/fluentd/Dockerfile
@@ -1,8 +1,8 @@
-FROM fluent/fluentd:v1.16-1
+FROM fluent/fluentd
 
 USER root
 
-RUN gem install fluent-plugin-elasticsearch fluent-plugin-docker_metadata_filter --no-document
+RUN gem install fluent-plugin-docker_metadata_filter fluent-plugin-elasticsearch --no-document
 
 COPY conf /fluentd/etc
 
