--- a/logging/fluentd/conf/fluent.conf
+++ b/logging/fluentd/conf/fluent.conf
@@ -1,21 +1,11 @@
-# Accept logs from containers using the Fluentd log driver
+# fluentd/conf/fluent.conf
+
 <source>
   @type forward
   port 24224
   bind 0.0.0.0
 </source>
 
-# OPTIONAL: Accept logs directly from Docker daemon via Docker socket
-# If you really want to use this, make sure the plugin is installed (see below)
-# Otherwise, comment it out to avoid errors
-
-# <source>
-#   @type docker_container_logs
-#   docker_url unix:///var/run/docker.sock
-#   tag docker.*
-# </source>
-
-# Send all logs to Elasticsearch
 <match **>
   @type elasticsearch
   host elasticsearch
